messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-blue
  labels:
    app: django-app
    version: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
      version: blue
  template:
    metadata:
      labels:
        app: django-app
        version: blue
    spec:
      containers:
      - name: django-app
        image: yourusername/django-app:v1.0  # Blue version image
        ports:
        - containerPort: 8000
